Fix issue with 2nd line of headers wrapping and having different padding
- The issue is we can't properly set the padding on the wrapped lines of
  headers because padding doesn't work with the :first-line pseudo element.
- This change allows the octicon links from github show so the padding is
  uniform for the headings on mobile.  Note the octicon links don't really show
  up with this change because hover is required to see them, and there is
  typically no hover event on mobile.

--- a/pskb_website/static/css/base.css
+++ b/pskb_website/static/css/base.css
@@ -1139,15 +1139,6 @@ td.login-name {
         padding-top: 40px;
     }
 
-    .markdown-body h1,
-    .markdown-body h2,
-    .markdown-body h3,
-    .markdown-body h4,
-    .markdown-body h5,
-    .markdown-body h6 {
-        padding-left: 20px;
-    }
-
     .markdown-body h1 {
         font-size: 32px;
     }
@@ -1184,24 +1175,6 @@ td.login-name {
 
     #article pre, #article blockquote, #article form {
         margin-left: 0px;
-    }
-
-    #article h1 .octicon-link,
-    #article h2 .octicon-link,
-    #article h3 .octicon-link,
-    #article h4 .octicon-link,
-    #article h5 .octicon-link,
-    #article h6 .octicon-link {
-        display: none;
-    }
-
-    #article h1:hover .octicon-link,
-    #article h2:hover .octicon-link,
-    #article h3:hover .octicon-link,
-    #article h4:hover .octicon-link,
-    #article h5:hover .octicon-link,
-    #article h6:hover .octicon-link {
-        display: none;
     }
 
     .close-btn {
